--- a/Bulk_mircoarray/Microarray_data_class.ipynb
+++ b/Bulk_mircoarray/Microarray_data_class.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
     "        # need to randomly mix the remaining 7 CTs\n",
     "        other_mix = self.np.random.uniform(0, 1, len(ctList) - 1)\n",
     "        other_mix = random_total * other_mix / other_mix.sum()\n",
-    "        new_mix = np.insert(other_mix, 0, mix[0])\n",
+    "        new_mix = self.np.insert(other_mix, 0, mix[0])\n",
     "        return new_mix\n",
     "        \n",
     "    def createMixDF(self, ctList, n_samp=10, mix = None):\n",
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,16 +474,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test80 = test.createMixDF(['neutrophils'], n_samp=100, mix=[0.8])"
+    "test0 = test.createMixDF(['NK.cells'], n_samp=100, mix=[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -492,32 +492,32 @@
        "(5166, 100)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# test_data.keys()\n",
-    "test70.shape"
+    "test0.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test70.to_csv('mixed_dfs/neutro_coarse_all_70.csv')"
+    "test0.to_csv('mixed_dfs/nk_coarse_all_0.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "del test70"
+    "del test0"
    ]
   },
   {
