--- a/Bulk_mircoarray/Microarray_data_class.ipynb
+++ b/Bulk_mircoarray/Microarray_data_class.ipynb
@@ -431,6 +431,7 @@
     "            otherCts = [ct for ct in self.ct if ct != ctList[0]]\n",
     "            train_mixData = self.normData(ct=otherCts)\n",
     "            for i in range(n_samp):\n",
+    "#                 print('working on '+str(i)+'\\n\\n')\n",
     "                ct_df = train_ctData[ctList[0]].sample(1, axis=1)\n",
     "                colname = ct_df.columns.values[0]\n",
     "                ct_df.rename(columns={colname:ctList[0]}, inplace = True)\n",
@@ -448,6 +449,7 @@
     "#                 print(str(ct_mix))\n",
     "                for ct, ratio in ct_mix.items():\n",
     "                    ct_df.loc[:,ct] = ct_df[ct]*ratio\n",
+    "#                 print(ct_df.head())\n",
     "                if i == 0:\n",
     "                    mixed_counts = ct_df.apply(sum, 1)\n",
     "                    mix_sample_df = self.pd.DataFrame(mixed_counts, columns=['sample'+str(i)])\n",
@@ -474,16 +476,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test0 = test.createMixDF(['NK.cells'], n_samp=100, mix=[0])"
+    "# Need to do 70, 60, and 50 as well\n",
+    "test0 = test.createMixDF(['CD8.T.cells'], n_samp=100, mix=[0.5])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +495,7 @@
        "(5166, 100)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,11 +507,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test0.to_csv('mixed_dfs/nk_coarse_all_0.csv')"
+    "test0.to_csv('mixed_dfs/cd8tcells_coarse_all_50.csv')"
    ]
   },
   {
